k8s/deploy-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-service
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: deploy-service
  template:
    metadata:
      labels:
        app: deploy-service
    spec:
      serviceAccountName: deploy-service
      nodeSelector:
        dedicated: deploy-service
      tolerations:
        - key: dedicated
          operator: Equal
          value: deploy-service
          effect: NoSchedule
      containers:
        - name: deploy-service
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
