k8s/deploy-service/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-service-postgres
spec:
  selector:
    app: deploy-service-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
