k8s/deploy-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-service
spec:
  selector:
    app: deploy-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
