k8s/deploy-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploy-service
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "DEPLOY_SERVICE_HOST_PLACEHOLDER"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deploy-service
                port:
                  number: 80
